[package]
name = "tatami_rust"
version = "0.1.0"
authors = ["zicog <zicog@example.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"
rayon = "*"

[features]
# Select use of i32 or i64 as iteger type
use_i64 = []
use_i32 = []



[profile.release]
#overflow-checks = true
