[package]
name = "tatami_rust"
version = "0.1.0"
authors = ["zicog <zicog@example.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"
rayon = "*"

[build-dependencies]
num = "0.2"

[features]
# Select use of u32 or u64 as prime number type
use_u64 = []
use_u32 = []

# Selected serial or threaded 
serial = []
threaded = []

[profile.release]
#overflow-checks = true
